--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./static/css/style.css">
 </head>
 
-<body class = "background">
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="https://github.com/umakiyer/plotly_deployment.git">Link to GitHub
+<body class="background">
+<br>
+
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="https://umakiyer.github.io/plotly_deployment/">Link to GitHub
       Repository</a>
-  </nav>
-<!-- Start of dashBoard -->
+  </nav> -->
+  <!-- Start of dashBoard -->
   <div class="container">
     <!-- Jumberton -->
     <div class="row">
@@ -27,43 +28,55 @@
       </div>
     </div>
 
-   
-    <div class="row">
-      <div class="col-md-3">
-        <div class="well">
-          <h5><b>Test Subject ID No.:</b></h5>
-          <!-- <select id="selDataset"></select> -->
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+    <div class="container">
+      <!-- Jumberton -->
+      <div class="row">
+        <div class="project">
+          <!-- col-md-12 jumbotron text-center -->
+          <h3>The volunteers will be able to identify the top ten bacterial species found in their navel. If Improbale
+            Beef identifies a species as a candidate to manufacture synthetic beef, the volunteers will be able to
+            identify if that species is found in their navel.</h3>
+            <br>
+
         </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
+      </div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="well">
+            <h5><b>Test Subject ID No.:</b></h5>
+            <!-- <select id="selDataset"></select> -->
+            <select id="selDataset" onchange="optionChanged(this.value)"></select>
           </div>
-          <div id="sample-metadata" class="panel-body"></div>
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title">Demographic Info</h3>
+            </div>
+            <div id="sample-metadata" class="panel-body"></div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div id="bar"></div>
+        </div>
+        <div class="col-md-5">
+          <div id="gauge"></div>
         </div>
       </div>
+      <br>
+      <!-- Bubble Chart -->
+      <div class="row">
+        <div class="col-md-12">
+          <div id="bubble"></div>
+        </div>
+      </div>
+      <br>
 
-      <div class="col-md-4">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
     </div>
-    <br>
-    <!-- Bubble Chart -->
-    <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
-    </div>
-    <br>
-        
-  </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="charts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="./static/js/charts.js"></script>
 
 </body>
 
